[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/Tiles/WaterTiles/water16.jpg" type="Texture" id=1]
[ext_resource path="res://assets/Tiles/WaterTiles/water_elec1.jpg" type="Texture" id=2]
[ext_resource path="res://assets/Tiles/WaterTiles/water_elec2.jpg" type="Texture" id=3]
[ext_resource path="res://assets/Tiles/WaterTiles/water_elec3.jpg" type="Texture" id=4]
[ext_resource path="res://assets/Tiles/WaterTiles/water_elec4.jpg" type="Texture" id=5]
[ext_resource path="res://assets/Tiles/WaterTiles/water_elec5.jpg" type="Texture" id=6]
[ext_resource path="res://assets/Tiles/WaterTiles/water_elec6.jpg" type="Texture" id=7]
[ext_resource path="res://assets/Tiles/WaterTiles/water_elec7.jpg" type="Texture" id=8]
[ext_resource path="res://scripts/Tilemap Scripts/Water.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "Water_Elec",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 9, 9 )

[node name="WaterTile" type="Area2D"]
z_index = -98
collision_layer = 16
script = ExtResource( 9 )

[node name="ElecCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Idle"
playing = true

[node name="ElecTimer" type="Timer" parent="."]

[node name="WaterArea" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 16

[node name="WaterCollision" type="CollisionShape2D" parent="WaterArea"]
shape = SubResource( 3 )

[connection signal="timeout" from="ElecTimer" to="." method="_on_Timer_timeout"]
